# F5_TTS

./: .gitignore  README.md  infer_gradio.py  install_pytorch.bat  manage.py  pyproject.toml  requirements.txt  ruff.toml  run_multilingual_test.py  start_server.py  test_django_api.py  test_language_switching.py  test_model_downloading.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tts/: serializers.py  services.py  urls.py  views.py
tts_api/: asgi.py  settings.py  urls.py  wsgi.py
